Fixes horizontal alignment of output section

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
   height: auto;
 }
 .fps-canvas {
-  margin-top: 1rem;
   width: 100%;
   max-width: 800px;
   height: auto;
